--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
 body{
     background-color: #05668C;
 }
+
+.ft-container{
+    background-color: #00A896;
+    margin: 0 auto;
+    height: 50vh;
+    margin-top: 100px;
+    border-radius: 20px;
+}
+
+h1{
+    padding-top: 20px;
+    color: #05668C;
+}
